Public/stylesheets/style.css
/** Bootstrap Override **/
.navbar .navbar-nav .nav-link:hover {
  color: #f56d01;
}

.navbar .navbar-nav .nav-link.active {
  color: #f56d01;
}

.btn-warning {
  background-color: #f56d01 !important;
  color: #fff;
  outline: none !important;
}

.btn-warning:hover {
  background-color: #ff9100 !important;
}

/** Bootstrap Override - ENDS **/

body {
  line-height: 1.75;
  font-family: 'Roboto Flex', sans-serif;
}

.flex-wrapper {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}

img {
  display: block;
  margin-left: auto;
  margin-right: auto;
  max-width: 100%;
  max-height: auto;
}

.hero {
  background-attachment: fixed;
  background-position: top;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
}

.hero::before {
  content: "";
  position: absolute;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
  background-color: rgba(0, 0, 0, 0.514);
}

.hero-text {
  color: #fff;
  position: relative;
}

a {
  color: black;
  text-decoration: none;
}

a:hover {
  color: #f56d01;
}

#white-link {
  color: white;
}
#white-link:hover {
  color: #f56d01;
}

i {
  color: #f56d01;
}

ul {
  position: relative;
  list-style: none;
}

.list::before {
  content: '➤';
  position: absolute;
  left: 0;
}

.list:any-link{
  color: rgba(0, 0, 0, 0.5);
}

.list:any-link:hover {
  color: #fff;
}

.page-template {
  background-attachment: fixed;
  background-position: top;
  background-repeat: no-repeat;
  background-size: cover auto;
  position: relative;
  padding-left: 138px;
  padding-right: 138px;
  padding-top: 150px;
  padding-bottom: 50px;
  min-height: 30vh;
  max-height: auto;
}

.page-template::before {
  content: "";
  position: absolute;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
  background-color: rgba(0, 0, 0, 0.274);
}


/* Mobile View */
@media only screen and (max-width: 600px) {

  body {
    line-height: 1;
  }

  .hero {
    background-attachment: fixed;
    background-position: top;
    background-repeat: no-repeat;
    background-size: 100vh;
    position: relative;
  }

  .home-hero {
    padding: 25px;
    min-height: 50vh;
  }

  .page-template {
    background-attachment: fixed;
    background-position: top;
    background-repeat: no-repeat;
    background-size: 100vh auto;
    position: relative;
    padding: 25px;
    min-height: 15vh;
    max-height: auto;
  }

  .div-type-1 {
    background-color: rgb(245, 245, 245);
    padding: 13px;
    margin-left: auto;
    margin-right: auto;
    min-height: 94vh;
  }

  .div-type-2 {
    background-color: #fff;
    padding-left: 13px;
    padding-right: 13px;
    padding-top: 13px;
    padding-bottom: 13px;
    margin-left: auto;
    margin-right: auto;
    min-height: 94vh;
    max-height: auto;
  }

  #contact {
    padding: 13px;
    line-height: 1.75;
  }

  .img-sm {
    display:none !important;
  }

  .img-md {
    padding-block: 20px;
  }
}


/* Full Screen */
@media only screen and (min-width: 600px) {
  .home-hero {
    padding-left: 138px;
    padding-right: 138px;
    padding-top: 150px;
    padding-bottom: 50px;
    min-height: 40vh;
  }

  .div-type-1 {
    background-color: rgb(245, 245, 245);
    padding-top: 100px;
    padding-bottom: 100px;
    justify-content: space-between;
    min-height: 50vh;
    max-height: auto;
  }

  .div-type-2 {
    background-color: #fff;
    padding-top: 100px;
    padding-bottom: 100px;
    min-height: 50vh;
    max-height: auto;
  }

  .innertext {
    margin-left: auto;
    margin-right: auto;
    min-width: 960px;
    width: 90%;
    max-width: 1200px;
  }

  #contact {
    padding-top: 50px;
    padding-bottom: 50px;
    max-height: auto;
  }

  .nextBtn {
    display: none;
  }
}

/** Price Cards **/

.pricingTable {
  color: #555;
  background-color: #fff;
  text-align: center;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
}

.pricingTable .pricingTable-header {
  color: #fff;
  background: linear-gradient(to top right, #854BCC, #4C9FD0);
  padding: 25px 20px 80px;
  margin: 0 0 10px;
  clip-path: polygon(0 0, 100% 0, 100% 70%, 0% 100%);
}

.pricingTable .title {
  color: rgba(255, 255, 255, 0.8);
  font-size: 30px;
  font-weight: 300;
  letter-spacing: 1px;
  text-transform: uppercase;
  margin: 0 0 15px;
}

.pricingTable .price-value .amount {
  font-size: 80px;
  font-weight: 600;
  line-height: 80px;
  display: block;
}

.pricingTable .price-value .duration {
  font-size: 19px;
  font-weight: 200;
  letter-spacing: 0.5px;
  display: block;
}

.pricingTable .pricing-content {
  padding: 0;
  margin: 0 0 35px;
  list-style: none;
  display: inline-block;
}

.pricingTable .pricing-content li {
  font-size: 18px;
  line-height: 25px;
  text-transform: capitalize;
  line-height: 35px;
  padding: 5px 0 0;
}

.pricingTable .pricing-content li:after {
  content: '';
  background: linear-gradient(to top right, #4bcc5c, #4C9FD0);
  height: 2px;
  width: 100%;
  margin: 5px 0 0;
  clear: both;
  display: block;
}

.pricingTable .pricing-content li:last-child:after {
  display: none;
}

.pricingTable .pricingTable-signup {
  background: linear-gradient(to top right, #854BCC, #4C9FD0);
  padding: 10px 10px 9px;
}

.pricingTable .pricingTable-signup a {
  color: rgba(255, 255, 255, 0.8);
  font-size: 20px;
  font-weight: 300;
  letter-spacing: 1px;
  text-transform: uppercase;
  transition: all 0.3s ease 0s;
}

.pricingTable .pricingTable-signup a:hover {
  color: #fff;
  text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4);
}

.pricingTable.pink .pricingTable-header,
.pricingTable.pink .pricing-content li:after,
.pricingTable.pink .pricingTable-signup {
  background: linear-gradient(to top right, #e2c544, #F57875);
}

.pricingTable.green .pricingTable-header,
.pricingTable.green .pricing-content li:after,
.pricingTable.green .pricingTable-signup {
  background: linear-gradient(to top right, #4EEABA, #36A3CC);
}

@media only screen and (max-width: 600px) {
  .pricingTable {
    margin: 0 0 40px;
  }
}

#backTopBtn {
  display: none; /* Hidden by default */
  position: fixed; /* Fixed/sticky position */
  bottom: 20px; /* Place the button at the bottom of the page */
  right: 30px; /* Place the button 30px from the right */
  z-index: 99; /* Make sure it does not overlap */
  border: none; /* Remove borders */
  outline: none; /* Remove outline */
  background-color: rgb(55, 55, 55); /* Set a background color */
  color: white; /* Text color */
  cursor: pointer; /* Add a mouse pointer on hover */
  padding: 15px; /* Some padding */
  border-radius: 10px; /* Rounded corners */
  font-size: 18px; /* Increase font size */
}

